update deps, attempt at fixing jumpy layout

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -18,11 +18,5 @@
         }
     }
 
-    #add-fab {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-    }
-
     h2 { margin: 0; }
 }
