--- a/src/app/components/new-item/new-item.component.scss
+++ b/src/app/components/new-item/new-item.component.scss
@@ -5,6 +5,14 @@
 
     font-size: 1.2em;
 
+    height: 100%;
+    overflow: auto;
+
+    div {
+        width: 100%;
+        height: available;
+    }
+
     .item-input {
         caret-color: #E9DCDC;
     }
